// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> should render a Field component, creating a Text child with the provided number 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

.c1 {
  font-family: 'Open Sans',Arial,sans-serif;
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #262D33;
  font-weight: 400;
}

<Field
  label="FTE"
>
  <styled.div>
    <div
      className=""
    >
      <class_1
        className="label-component"
        color="#667380"
        isInline={false}
        type="small"
      >
        <Skeleton
          className="label-component"
          color="#667380"
          isInline={false}
          skeletonOptions={
            Object {
              "shape": "line",
              "showSkeleton": false,
              "size": "large",
            }
          }
          type="small"
        >
          <TextComponent
            className="label-component"
            color="#667380"
            isInline={false}
            type="small"
          >
            <styled.span
              className="label-component"
              color="#667380"
              isInline={false}
              type="small"
            >
              <span
                className="label-component c0"
                color="#667380"
                type="small"
              >
                FTE
              </span>
            </styled.span>
          </TextComponent>
        </Skeleton>
      </class_1>
    </div>
  </styled.div>
  <class_1
    color="#262D33"
    key=".0"
  >
    <Skeleton
      className=""
      color="#262D33"
      skeletonOptions={
        Object {
          "shape": "line",
          "showSkeleton": false,
          "size": "large",
        }
      }
    >
      <TextComponent
        color="#262D33"
        isInline={true}
        type="body"
      >
        <styled.span
          color="#262D33"
          isInline={true}
          type="body"
        >
          <span
            className="c1"
            color="#262D33"
            type="body"
          >
            1.000
          </span>
        </styled.span>
      </TextComponent>
    </Skeleton>
  </class_1>
</Field>
`;

exports[`<Field /> should render a Field component, creating a Text child with the provided text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

.c1 {
  font-family: 'Open Sans',Arial,sans-serif;
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #262D33;
  font-weight: 400;
}

<Field
  label="Position Title"
>
  <styled.div>
    <div
      className=""
    >
      <class_1
        className="label-component"
        color="#667380"
        isInline={false}
        type="small"
      >
        <Skeleton
          className="label-component"
          color="#667380"
          isInline={false}
          skeletonOptions={
            Object {
              "shape": "line",
              "showSkeleton": false,
              "size": "large",
            }
          }
          type="small"
        >
          <TextComponent
            className="label-component"
            color="#667380"
            isInline={false}
            type="small"
          >
            <styled.span
              className="label-component"
              color="#667380"
              isInline={false}
              type="small"
            >
              <span
                className="label-component c0"
                color="#667380"
                type="small"
              >
                Position Title
              </span>
            </styled.span>
          </TextComponent>
        </Skeleton>
      </class_1>
    </div>
  </styled.div>
  <class_1
    color="#262D33"
    key=".0"
  >
    <Skeleton
      className=""
      color="#262D33"
      skeletonOptions={
        Object {
          "shape": "line",
          "showSkeleton": false,
          "size": "large",
        }
      }
    >
      <TextComponent
        color="#262D33"
        isInline={true}
        type="body"
      >
        <styled.span
          color="#262D33"
          isInline={true}
          type="body"
        >
          <span
            className="c1"
            color="#262D33"
            type="body"
          >
            Chief Executive Officer
          </span>
        </styled.span>
      </TextComponent>
    </Skeleton>
  </class_1>
</Field>
`;

exports[`<Field /> should render a Field component, with the provided component child 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

<Field
  label="Position Title"
>
  <styled.div>
    <div
      className=""
    >
      <class_1
        className="label-component"
        color="#667380"
        isInline={false}
        type="small"
      >
        <Skeleton
          className="label-component"
          color="#667380"
          isInline={false}
          skeletonOptions={
            Object {
              "shape": "line",
              "showSkeleton": false,
              "size": "large",
            }
          }
          type="small"
        >
          <TextComponent
            className="label-component"
            color="#667380"
            isInline={false}
            type="small"
          >
            <styled.span
              className="label-component"
              color="#667380"
              isInline={false}
              type="small"
            >
              <span
                className="label-component c0"
                color="#667380"
                type="small"
              >
                Position Title
              </span>
            </styled.span>
          </TextComponent>
        </Skeleton>
      </class_1>
    </div>
  </styled.div>
  <p
    key=".0"
  >
    Chief Executive Officer
  </p>
</Field>
`;
